--- a/force-app/main/default/layouts/Reward_And_Recognition__c-Winners Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Reward_And_Recognition__c-Winners Layout.layout-meta.xml
@@ -29,6 +29,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>System_Predicted_Status__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>Shout_Out_Heading__c</field>
             </layoutItems>
             <layoutItems>
