--- a/force-app/main/default/layouts/Reward_And_Recognition__c-Nomination.layout-meta.xml
+++ b/force-app/main/default/layouts/Reward_And_Recognition__c-Nomination.layout-meta.xml
@@ -93,6 +93,10 @@
                 <behavior>Edit</behavior>
                 <field>Status__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>System_Predicted_Status__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
