All the components related to Ravitheja

--- a/force-app/main/default/layouts/PM_Configure__c-PM Question Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/PM_Configure__c-PM Question Layout.layout-meta.xml
@@ -51,6 +51,10 @@
                 <behavior>Edit</behavior>
                 <field>Resource_Role__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Rejection_Cancellation_Reason__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
