--- a/force-app/main/default/layouts/Compensation__c-Compensation Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Compensation__c-Compensation Layout.layout-meta.xml
@@ -31,6 +31,10 @@
                 <behavior>Edit</behavior>
                 <field>Compensation_Submitted__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>HR_Rating__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
