--- a/force-app/main/default/layouts/Fulfillment__c-Fulfillment Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Fulfillment__c-Fulfillment Layout.layout-meta.xml
@@ -67,6 +67,10 @@
                 <behavior>Readonly</behavior>
                 <field>Status__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Next_Appraisal_Date__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
