--- a/force-app/main/default/layouts/Goal__c-Goal Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Goal__c-Goal Layout.layout-meta.xml
@@ -140,7 +140,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h52000003Xi7i</masterLabel>
+        <masterLabel>00h5e00000Clm3U</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
