--- a/force-app/main/default/layouts/Reward_And_Recognition__c-Nomination.layout-meta.xml
+++ b/force-app/main/default/layouts/Reward_And_Recognition__c-Nomination.layout-meta.xml
@@ -63,6 +63,10 @@
                 <behavior>Edit</behavior>
                 <field>Nomination_Submitted__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Processed__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
