--- a/force-app/main/default/lwc/scroingaward/scroingaward.css
+++ b/force-app/main/default/lwc/scroingaward/scroingaward.css
@@ -57,10 +57,17 @@
 }
 
 .image img {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    object-fit: cover;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.image{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .annualAward {
