--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.css
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.css
@@ -44,6 +44,9 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+
+	border: 2px solid rgb(192, 192, 192);
+	border-radius: 7px;
 }
 
 .pointerTable{
@@ -66,10 +69,14 @@
 	margin-top: 0px;
 	text-align: center;
 	width: 100%;
+
+	position: sticky;
+    bottom: 0;
 }
 
 .footer-layout{
 	justify-content: center;
+	background-color: white;
 }
 
 a {
