goalDataTable pmkrafullview quarterlyKRAFullViewCtrl_TEST CalculateFullQuarterlyKRATEST TestDataFactory

--- a/force-app/main/default/lwc/pmkrafullview/pmkrafullview.css
+++ b/force-app/main/default/lwc/pmkrafullview/pmkrafullview.css
@@ -46,6 +46,8 @@
 .slds-modal__container {
     max-width: 80rem !important;
     width: 80% !important;
+   /* max-height: 80rem !important;
+    height: 80% !important;*/
 }
 .custom-vertical-align {
     vertical-align: middle;
