--- a/force-app/main/default/layouts/Contact-Resource-HR.layout-meta.xml
+++ b/force-app/main/default/layouts/Contact-Resource-HR.layout-meta.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
-    <excludeButtons>DataDotComClean</excludeButtons>
-    <excludeButtons>RequestUseSfdc</excludeButtons>
+    <excludeButtons>OpenSlackRecordChannel</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <layoutSections>
         <customLabel>true</customLabel>
@@ -24,54 +23,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>EMS_LM_Marital_Status__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>FloatTypeLeaves__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>UtlizedFloatLeaves__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>AvailbleUtilizedLeaves__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>No_of_Avilable_floatLeaves__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>No_of_Avilable_floatLeave_credits__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>No_of_Paid_Time_Off_leaves_utilised__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>No_of_Paid_Time_Off_leaves_available__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>No_of_Floating_Holiday_Leaves_Credited__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>No_of_Floating_Holiday_leaves_utilised__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>No_of_Unpaid_time_Off_leaves_utilised__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>Number_of_Work_From_Home_s__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Not_Eligible_For_Annual_Awards__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -103,10 +54,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>EMS_RM_Employee_Id__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Resource_Manager__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -147,10 +94,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Level_of_Approval__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>EMS_RM_Serving_Notice_Period__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -197,18 +140,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Timesheet_NoNeed__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Appraisal_Date__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Last_Appraisal_Date__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Next_Appraisal_Date__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -344,10 +275,6 @@
                 <field>EMS_LM_No_Of_Leaves_Credit__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>No_of_Paid_Time_Off_leaves_credited__c</field>
-            </layoutItems>
-            <layoutItems>
                 <behavior>Edit</behavior>
                 <field>EMS_LM_No_Of_Utilized_Leaves__c</field>
             </layoutItems>
@@ -466,24 +393,19 @@
             <sortOrder>4</sortOrder>
         </platformActionListItems>
         <platformActionListItems>
-            <actionName>Contact.Change_Project</actionName>
-            <actionType>QuickAction</actionType>
-            <sortOrder>5</sortOrder>
-        </platformActionListItems>
-        <platformActionListItems>
             <actionName>ChangeRecordType</actionName>
             <actionType>StandardButton</actionType>
-            <sortOrder>6</sortOrder>
+            <sortOrder>5</sortOrder>
         </platformActionListItems>
         <platformActionListItems>
             <actionName>Clone</actionName>
             <actionType>StandardButton</actionType>
-            <sortOrder>7</sortOrder>
+            <sortOrder>6</sortOrder>
         </platformActionListItems>
         <platformActionListItems>
             <actionName>DisableCustomerPortal</actionName>
             <actionType>StandardButton</actionType>
-            <sortOrder>8</sortOrder>
+            <sortOrder>7</sortOrder>
         </platformActionListItems>
     </platformActionList>
     <quickActionList>
@@ -522,19 +444,14 @@
     </relatedContent>
     <relatedLists>
         <fields>NAME</fields>
+        <fields>Resource_Reports_Name__c</fields>
         <fields>Resource_Reports_To__c</fields>
-        <fields>Reports_To_Role__c</fields>
         <fields>Relationship_Type__c</fields>
+        <fields>Reports_To_Role__c</fields>
         <relatedList>Resource_Resource_Relationship__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
-        <fields>NAME</fields>
-        <fields>Resource__c</fields>
-        <fields>Resource_Role__c</fields>
-        <fields>Relationship_Type__c</fields>
-        <relatedList>Resource_Resource_Relationship__c.Resource_Reports_To__c</relatedList>
-    </relatedLists>
-    <relatedLists>
+        <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>EMS_TM_ProjectName_Asgn__c</fields>
         <fields>EMS_TM_AssignedAs__c</fields>
@@ -631,22 +548,12 @@
         <relatedList>RelatedFileList</relatedList>
     </relatedLists>
     <relatedLists>
-        <excludeButtons>MassChangeOwner</excludeButtons>
-        <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
-        <fields>Fiscal_Year__c</fields>
-        <fields>Avg_Rating__c</fields>
-        <fields>Q1_Rating__c</fields>
-        <fields>Q2_Rating__c</fields>
-        <fields>Q3_Rating__c</fields>
-        <fields>Q4_Rating__c</fields>
-        <fields>Recognization_Type__c</fields>
-        <fields>RECORDTYPE</fields>
-        <relatedList>Fulfillment__c.Resource__c</relatedList>
+        <relatedList>PM_Configure__c.Mentor_Mentee__c</relatedList>
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
-        <relatedList>Compensation__c.Resource__c</relatedList>
+        <relatedList>PM_Configure__c.Reporting_Contact__c</relatedList>
     </relatedLists>
     <relatedObjects>AccountId</relatedObjects>
     <showEmailCheckbox>false</showEmailCheckbox>
@@ -655,7 +562,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h52000004IcDi</masterLabel>
+        <masterLabel>00h5e00000Clm3o</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
